--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
-        "use": "@now/node"
+        "src": "./index.js",
+        "use": "@vercel/node"
       }
     ],
-    "routes": [
+    "rewrites": [
       {
      
-        "src": "/(.*)",
-        "dest": "index.js"
+        "source": "/(.*)",
+        "dest": "/"
       }
     ]
   }
